# RaspBioloid-MoPi-msgs

./: CMakeLists.txt  package.xml
msg/: mopi_info.msg
srv/: MopiInfo.srv
